@@ -3,13 +3,16 @@ Version 0.7.3 -- Subversion
 
 * Added Italian translation (emanuelez)
 * Added more callback functions to module API
-* Added config.php option to disable sending translations to htmlarea
+* Added config.php option to disable sending translations to htmlarea 
 (#000049)
+* Added active/inactive toggle in Content Management (Xorn725)
 * Fixed bug with relative paths in dhtmlmenu
 * Fixed changing ownership of html blobs
 * Fixed displaying html_blobs in modules with executeuser
 * Fixed HTML bug in print module (#000048)
 * Fixed error message with Deleting templates (Part of #000047)
+* Fixed check_ownership and check_authorship to be more consistant 
+(Xorn725)
 * Reenabled Image Manager
 * Removed Allow Admin Access from add/edit user
 * Updated adodb to 4.54
